# datasette-import

./: README.md  pyproject.toml
datasette_import/: __init__.py
datasette_import/templates/: import_create_table.html
tests/: test_import.py
