[project]
name = "datasette-import"
version = "0.1a5"
description = "Tools for importing data into Datasette"
readme = "README.md"
authors = [{name = "Datasette"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette>=1.0a13"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-import"
Changelog = "https://github.com/datasette/datasette-import/releases"
Issues = "https://github.com/datasette/datasette-import/issues"
CI = "https://github.com/datasette/datasette-import/actions"

[project.entry-points.datasette]
import = "datasette_import"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.package-data]
datasette_import = ["static/*", "templates/*"]
